Use Ubuntu to create the releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,7 @@ jobs:
   create-release:
     name: Create Release
     needs: build
+    runs-on: ubuntu-18.04
     if: ${{ contains(github.ref, '__release-test') }}
     steps:
       - name: Download all artifacts
