--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,8 @@ jobs:
       #   if: matrix.arch == 'x64'
       #   timeout-minutes: 5
       #   run: yarn test:integration
+      - name: List of files... where ar my artifacts?
+        run: find . -maxdepth 1 -type d -exec ls -ld "{}" \;
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v2
         with:
