Only package and then create release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,25 +90,23 @@ jobs:
       #   if: matrix.arch == 'x64'
       #   timeout-minutes: 5
       #   run: yarn test:integration
-      - name: List of files... where ar my artifacts?
-        run: find . -maxdepth 1 -type d -exec ls -ld "{}" \;
+      - name: Publish production app
+        run: yarn run publish
+        env:
+          npm_config_arch: ${{ matrix.arch }}
+          DESKTOPBOT_TOKEN: ${{ secrets.DESKTOPBOT_TOKEN }}
+          WINDOWS_CERT_PASSWORD: ${{ secrets.WINDOWS_CERT_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          DEPLOYMENT_SECRET: ${{ secrets.DEPLOYMENT_SECRET }}
+          S3_KEY: ${{ secrets.S3_KEY }}
+          S3_SECRET: ${{ secrets.S3_SECRET }}
+          S3_BUCKET: github-desktop
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v2
         with:
           path: dist/*.{zip,exe,msi,nupkg}
           retention-days: 1
           if-no-files-found: error
-      # - name: Publish production app
-      #   run: yarn run publish
-      #   env:
-      #     npm_config_arch: ${{ matrix.arch }}
-      #     DESKTOPBOT_TOKEN: ${{ secrets.DESKTOPBOT_TOKEN }}
-      #     WINDOWS_CERT_PASSWORD: ${{ secrets.WINDOWS_CERT_PASSWORD }}
-      #     KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-      #     DEPLOYMENT_SECRET: ${{ secrets.DEPLOYMENT_SECRET }}
-      #     S3_KEY: ${{ secrets.S3_KEY }}
-      #     S3_SECRET: ${{ secrets.S3_SECRET }}
-      #     S3_BUCKET: github-desktop
 
   create-release:
     name: Create Release
