A few more fixes to test this…

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,8 @@ jobs:
           S3_KEY: ${{ secrets.S3_KEY }}
           S3_SECRET: ${{ secrets.S3_SECRET }}
           S3_BUCKET: github-desktop
+      - name: List of files... where are my artifacts?
+        run: ls dir
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v2
         with:
