--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
           S3_SECRET: ${{ secrets.S3_SECRET }}
           S3_BUCKET: github-desktop
       - name: List of files... where are my artifacts?
-        run: ls dir
+        run: ls dist
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v2
         with:
