--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.package-version.outputs.current-version }}
           files: artifacts/*
           name:
             ${{ format('GitHub Desktop {0}',
